// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`options as array of strings renders a closed drop down 1`] = `
<div>
  <div
    class="dropdown"
  >
    <button
      aria-controls="id_listbox"
      aria-haspopup="listbox"
      class="dropdown__button"
      id="id"
      type="button"
    >
      Apple
    </button>
    <ul
      class="dropdown__listbox"
      hidden=""
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        class="dropdown__listbox__option"
        id="id_apple"
        role="option"
        tabindex="-1"
      >
        Apple
      </li>
      <li
        class="dropdown__listbox__option"
        id="id_banana"
        role="option"
        tabindex="-1"
      >
        Banana
      </li>
      <li
        class="dropdown__listbox__option"
        id="id_orange"
        role="option"
        tabindex="-1"
      >
        Orange
      </li>
    </ul>
  </div>
</div>
`;

exports[`options options as array of numbers renders a closed drop down 1`] = `
<div>
  <div
    class="dropdown"
  >
    <button
      aria-controls="id_listbox"
      aria-haspopup="listbox"
      class="dropdown__button"
      id="id"
      type="button"
    >
      1
    </button>
    <ul
      class="dropdown__listbox"
      hidden=""
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        class="dropdown__listbox__option"
        id="id_1"
        role="option"
        tabindex="-1"
      >
        1
      </li>
      <li
        class="dropdown__listbox__option"
        id="id_2"
        role="option"
        tabindex="-1"
      >
        2
      </li>
      <li
        class="dropdown__listbox__option"
        id="id_3"
        role="option"
        tabindex="-1"
      >
        3
      </li>
    </ul>
  </div>
</div>
`;
